--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
         </div>
 
         <div class="absolute top-1/2 text-center bottom-24 left-0 -translate-y-1/2 z-20 px-10 w-full">
-            <h1 class="font-bold text-5xl md:text-8xl text-balance text-white italic md:w-6/12 w-full mx-auto">Build a
+            <h1 class="font-bold text-5xl md:text-6xl text-balance text-white italic md:w-6/12 w-full mx-auto">Build a
                 Fitness Community</h1>
-            <h5 class="text-white mt-3 md:text-6xl text-2xl">Not Just A Gym</h5>
-            <h5 class="text-white mt-12 md:text-xl text-lg">Beyond the weights and machines, find your people.</h5>
+            <h5 class="text-white mt-3 md:text-4xl text-2xl">Not Just A Gym</h5>
+            <h5 class="text-white mt-12 md:text-lg text-balance text-lg">Beyond the weights and machines, find your
+                people.</h5>
             <div>
                 <div class="flex items-center justify-center">
-                    <button class="bg-white flex items-center p-3 px-6 py-3 mt-6 rounded-xl capitalize
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_UBmFD9Fca-x7dIeK7hwh-ym-8xMaPcgaqqK1FqHwVkkZow/viewform?usp=header" class="bg-white flex items-center p-3 px-6 py-3 mt-6 rounded-xl capitalize
                                        transition-all duration-500 ease-in-out
                                        hover:bg-[#F68B1F] hover:text-white">
                         Join waitlist
@@ -103,7 +104,7 @@
                             <path d="m12 16 4-4-4-4" />
                             <path d="M8 12h8" />
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -111,7 +112,7 @@
         <div class="absolute inset-0 z-0 overflow-hidden">
             <div class="absolute z-30 inset-0 bg-black/40"></div>
 
-             <iframe
+            <iframe
                 src="https://player.vimeo.com/video/1098484680?autoplay=1&muted=1&loop=1&background=1&badge=0&autopause=0&player_id=0&app_id=58479"
                 class="w-full h-full object-cover block md:scale-150 scale-[3.9] -mt-px -mb-px" frameborder="0"
                 allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
@@ -121,87 +122,36 @@
 
     </section>
 
-    <section class="bg-black md:h-[1000px] py-28 md:py-0 relative flex items-center justify-center">
-        <div class="container mx-auto px-8 md:px-0">
-            <div class="grid md:grid-cols-3 grid-cols-1 gap-4">
-                <div class="mb-16 md:mb-0">
-                    <p class="md:text-6xl text-5xl me-10 text-balance text-white italic font-semibold">The Gym,
-                        Reimagined.
-                    </p>
-                    <p class="text-white md:text-2xl text-sm mt-3">Your Challenges, Our Solution.</p>
-                </div>
-                <div class="md:flex md:items-center md:justify-between col-span-2">
-                    <div class="mb-20 md:mb-0">
-                        <div class="flex items-center mb-20">
-                            <div class="w-20 text-center">
-                                <img src="image/competition.svg" alt="Competition icon">
-                            </div>
-                            <div class="text-balance ms-6 w-60 text-xl">
-                                <span class="text-white">Fun challenges that</span>
-                                <span class="text-[#2EDC27]">create
-                                    friendly competition</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center mb-20">
-                            <div class="w-20 text-center">
-                                <img src="image/community.svg" alt="Community icon">
-                            </div>
-                            <div class="text-balance ms-6 w-60 text-xl">
-                                <span class="text-white">Makes your gym a digital-first</span>
-                                <span class="text-[#2EDC27]">fitness community</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center">
-                            <div class="w-20 text-center">
-                                <img src="image/rewards.svg" alt="Rewards icon">
-                            </div>
-                            <div class="text-balance ms-6 w-60 text-xl">
-                                <span class="text-white">Earn stars, unlock badges, and</span>
-                                <span class="text-[#2EDC27] ">win real rewards</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="flex items-center mb-20">
-                            <div class="w-20 text-center">
-                                <img src="image/engagement.svg" alt="Engagement icon">
-                            </div>
-                            <div class="text-balance ms-6 w-60 text-xl">
-                                <span class="text-white">Fun challenges that</span>
-                                <span class="text-[#2EDC27] ">create
-                                    friendly competition</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center mb-20">
-                            <div class="w-20 text-center">
-                                <img src="image/leaderboard.svg" alt="Leaderboard icon">
-                            </div>
-                            <div class="text-balance ms-6 w-60 text-xl">
-                                <span class="text-white">Makes your gym a digital-first</span>
-                                <span class="text-[#2EDC27] ">fitness community</span>
-                            </div>
-                        </div>
-                        <div class="flex items-center">
-                            <div class="w-20 text-center">
-                                <img src="image/feed.svg" alt="Feed icon">
-                            </div>
-                            <div class="text-balance ms-6 w-60 text-xl">
-                                <span class="text-white">Earn stars, unlock badges, and</span>
-                                <span class="text-[#2EDC27] ">win real rewards</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+    <section class="bg-black md:h-[1000px] py-28 md:py-0 relative" style="background-image: url('image/widgets.svg');
+            background-size: 100% auto; /* Make image fit width and scale height */
+            background-position: bottom center; /* Explicitly center horizontally at bottom */
+            background-repeat: no-repeat;">
+        <div class=" container mx-auto px-8 md:px-0">
+
+            <div class="md:pt-60 md:pb-0 pt-0 pb-20 text-center">
+                <p class="md:text-6xl text-5xl me-10 text-balance text-white italic font-semibold">The Gym,
+                    Reimagined.
+                </p>
+                <p class="text-white md:text-lg text-balance text-sm mt-3">Trainz brings your gym to life, connecting
+                    members through shared goals, friendly competition, and rewarding achievements.</p>
             </div>
+
     </section>
+
+
+
+
     <section class="bg-black h-[1000px] py-28 md:py-0 relative flex items-center justify-center"
-        style="background-image: url('image/mob-mockup.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        style="background-image: url('image/awareness.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="mx-auto container px-8 md:px-0">
-            <h4 class="text-white md:text-[60px] text-4xl md:w-6/12 w-full text-balance leading-tight">Your Fitness,
-                Your Community, Your Rewards.</h4>
-            <p class="text-[20px] md:w-6/12 w-full text-white font-extralight leading-loose mt-5">
-                Trainz brings your gym to life, connecting members through shared goals, friendly competition, and
-                rewarding achievements. Stay consistent, win prizes, and redefine what's possible.
+            <p class="text-white md:text-xl text-4xl uppercase mb-4">Our mission</p>
+            <p class="text-white md:text-5xl text-4xl md:w-8/12 w-full text-balance font-semibold" style="line-height: 55px;">
+                To build awareness for fitness and create a thriving, healthy ecosystem
+            </p>
+            <p class="text-[18px] md:w-6/12 w-full text-white font-extralight leading-normal mt-5">
+                We're here to inspire you, celebrate your journey, and remind you that every step towards a
+                healthier life is more joyful, more fulfilling, and more achievable when we take it together.
             </p>
         </div>
     </section>
@@ -258,7 +208,7 @@
                         <div>
                             <div class="flex items-center">
 
-                                <button class="bg-[#FFBF5D] flex items-center p-3 px-10 mt-4 py-4 rounded-xl capitalize
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_UBmFD9Fca-x7dIeK7hwh-ym-8xMaPcgaqqK1FqHwVkkZow/viewform?usp=header" class="bg-[#FFBF5D] flex items-center p-3 px-10 mt-4 py-4 rounded-xl capitalize
                                        transition-all duration-500
                                        hover:bg-[#F68B1F] hover:text-white">
                                     Join waitlist
@@ -270,7 +220,7 @@
                                         <path d="m12 16 4-4-4-4" />
                                         <path d="M8 12h8" />
                                     </svg>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -339,12 +289,12 @@
                             <path
                                 d="M13.832 16.568a1 1 0 0 0 1.213-.303l.355-.465A2 2 0 0 1 17 15h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2A18 18 0 0 1 2 4a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-.8 1.6l-.468.351a1 1 0 0 0-.292 1.233 14 14 0 0 0 6.392 6.384" />
                         </svg>
-                        +971 5453656486
+                        +971 56 805 8642
                     </p>
                 </div>
             </div>
             <p class="text-white/60 text-right font-light text-xs mt-5">
-                © Copyright 2025, All Rights Reserved by AccoreLab IT Solutions
+                © Copyright 2025, All Rights Reserved by AccoreLab IT Solutions Co., LLC
             </p>
         </div>
     </section>
