--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="absolute top-0 left-0 right-0 z-20 p-10">
             <div class="grid grid-cols-2 gap-0 w-full">
-                <div><img src="image/trainz.svg" alt="Trainz Logo"></div>
+                <div><a href="index.html"> <img src="image/trainz.svg" alt="Trainz Logo"> </a></div>
                 <!-- <div class="flex items-center ml-auto">
                     <div class="md:block hidden">
                         <div class="text-white capitalize w-56 text-sm mr-4"> Connect, Compete, Conquer Secure Your Spot
@@ -266,9 +266,9 @@
                     </div>
                 </div>
                 <div class="pt-16 space-y-4">
-                    <a href="#" class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Terms and
+                    <a href="termsandconditions.html" class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Terms and
                         conditions</a>
-                    <a href="#" class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Privacy
+                    <a href="privacypolicy.html" class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Privacy
                         policy</a>
                 </div>
                 <div class="pt-16">
