--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -335,8 +335,8 @@
                         You focus on training.<br>
                         We’ll handle the motivation.
                     </p>
-                    <div class="flex">
-                        <button>
+                   <div class="flex">
+                        <a href="https://www.instagram.com/trainz.app/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round"
@@ -345,8 +345,8 @@
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                                 <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
                             </svg>
-                        </button>
-                        <button>
+                        </a>
+                        <a href="https://www.linkedin.com/showcase/trainz-app/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round"
@@ -356,7 +356,7 @@
                                 <rect width="4" height="12" x="2" y="9" />
                                 <circle cx="4" cy="4" r="2" />
                             </svg>
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <div class="pt-16 space-y-4">
