--- a/index.html
+++ b/index.html
@@ -51,6 +51,33 @@
             min-height: 100dvh;
             /* Dynamic viewport height for hero section */
         }
+
+       .video-container {
+        position: relative;
+        width: 100%;
+        height: 100vh; /* Example: set to viewport height. Adjust as needed */
+        overflow: hidden;
+    }
+
+    .video-placeholder {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+    }
+
+    #vimeo-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        /* Add transition for a smoother fade-in, optional */
+        transition: opacity 0.5s ease-in-out;
+    }
     </style>
 </head>
 
@@ -93,7 +120,8 @@
                 people.</h5>
             <div>
                 <div class="flex items-center justify-center">
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_UBmFD9Fca-x7dIeK7hwh-ym-8xMaPcgaqqK1FqHwVkkZow/viewform?usp=header" class="bg-white flex items-center p-3 px-6 py-3 mt-6 rounded-xl capitalize
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_UBmFD9Fca-x7dIeK7hwh-ym-8xMaPcgaqqK1FqHwVkkZow/viewform?usp=header"
+                        class="bg-white flex items-center p-3 px-6 py-3 mt-6 rounded-xl capitalize
                                        transition-all duration-500 ease-in-out
                                        hover:bg-[#F68B1F] hover:text-white">
                         Join waitlist
@@ -112,12 +140,14 @@
         <div class="absolute inset-0 z-0 overflow-hidden">
             <div class="absolute z-30 inset-0 bg-black/40"></div>
 
-            <iframe
-                src="https://player.vimeo.com/video/1098484680?autoplay=1&muted=1&loop=1&background=1&badge=0&autopause=0&player_id=0&app_id=58479"
-                class="w-full h-full object-cover block md:scale-150 scale-[3.9] -mt-px -mb-px" frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
-                title="trainz">
-            </iframe>
+            <div class="video-container">
+                <img id="placeholder-image" src="image/heroimg.png" alt="Loading Video" class="video-placeholder">
+                <iframe id="vimeo-video"
+                    src="https://player.vimeo.com/video/1098484680?autoplay=1&muted=1&loop=1&background=1&badge=0&autopause=0&player_id=0&app_id=58479"
+                    class="w-full h-full object-cover block md:scale-150 scale-[3.9] -mt-px -mb-px" frameborder="0"
+                    allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+                    title="trainz" style="display:none;"></iframe>
+            </div>
         </div>
 
     </section>
@@ -146,7 +176,8 @@
         style="background-image: url('image/awareness.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="mx-auto container px-8 md:px-0">
             <p class="text-white md:text-xl text-4xl uppercase mb-4">Our mission</p>
-            <p class="text-white md:text-5xl text-4xl md:w-8/12 w-full text-balance font-semibold" style="line-height: 55px;">
+            <p class="text-white md:text-5xl text-4xl md:w-8/12 w-full text-balance font-semibold"
+                style="line-height: 55px;">
                 To build awareness for fitness and create a thriving, healthy ecosystem
             </p>
             <p class="text-[18px] md:w-6/12 w-full text-white font-extralight leading-normal mt-5">
@@ -208,7 +239,8 @@
                         <div>
                             <div class="flex items-center">
 
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_UBmFD9Fca-x7dIeK7hwh-ym-8xMaPcgaqqK1FqHwVkkZow/viewform?usp=header" class="bg-[#FFBF5D] flex items-center p-3 px-10 mt-4 py-4 rounded-xl capitalize
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_UBmFD9Fca-x7dIeK7hwh-ym-8xMaPcgaqqK1FqHwVkkZow/viewform?usp=header"
+                                    class="bg-[#FFBF5D] flex items-center p-3 px-10 mt-4 py-4 rounded-xl capitalize
                                        transition-all duration-500
                                        hover:bg-[#F68B1F] hover:text-white">
                                     Join waitlist
@@ -242,7 +274,7 @@
                         We’ll handle the motivation.
                     </p>
                     <div class="flex">
-                        <button>
+                        <a href="https://www.instagram.com/trainz.app/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round"
@@ -251,8 +283,8 @@
                                 <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
                                 <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
                             </svg>
-                        </button>
-                        <button>
+                        </a>
+                        <a href="https://www.linkedin.com/showcase/trainz-app/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round"
@@ -262,13 +294,15 @@
                                 <rect width="4" height="12" x="2" y="9" />
                                 <circle cx="4" cy="4" r="2" />
                             </svg>
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <div class="pt-16 space-y-4">
-                    <a href="termsandconditions.html" class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Terms and
+                    <a href="termsandconditions.html"
+                        class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Terms and
                         conditions</a>
-                    <a href="privacypolicy.html" class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Privacy
+                    <a href="privacypolicy.html"
+                        class="text-white/60 hover:text-[#FFBF5D] transition-all duration-500 block">Privacy
                         policy</a>
                 </div>
                 <div class="pt-16">
@@ -298,6 +332,66 @@
             </p>
         </div>
     </section>
+
+   <script src="https://player.vimeo.com/api/player.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var iframe = document.getElementById('vimeo-video');
+        var player = new Vimeo.Player(iframe);
+        var placeholderImage = document.getElementById('placeholder-image');
+
+        // Initially show placeholder and hide video
+        placeholderImage.style.display = 'block';
+        iframe.style.opacity = '0'; // Start with opacity 0 for smooth transition
+        iframe.style.display = 'none'; // Keep it truly hidden until ready
+
+        // Flag to prevent multiple showings
+        let videoShown = false;
+
+        function showVideo() {
+            if (!videoShown) {
+                console.log('Video is ready to be shown!');
+                placeholderImage.style.display = 'none';
+                iframe.style.display = 'block';
+                // Trigger reflow to ensure display:block takes effect before transition
+                iframe.offsetWidth; // This forces a reflow
+                iframe.style.opacity = '1';
+                videoShown = true;
+            }
+        }
+
+        player.on('loaded', function() {
+            console.log('Vimeo Player: "loaded" event fired.');
+            showVideo();
+        });
+
+        // Fallback or alternative: Use the 'play' event
+        // This fires when the video actually starts playing.
+        // It might be more reliable for visibility if 'loaded' isn't enough.
+        player.on('play', function() {
+            console.log('Vimeo Player: "play" event fired.');
+            showVideo();
+        });
+
+        player.on('error', function(error) {
+            console.error('Vimeo Player Error:', error);
+            // Optionally, remove the placeholder or show an error message
+            // placeholderImage.style.display = 'none';
+            // alert('Video failed to load: ' + error.name);
+        });
+
+        // Debugging: Check if the player object is created
+        console.log('Vimeo Player object created:', player);
+
+        // Debugging: If the video needs to be manually triggered to load
+        // In some cases, if autoplay is prevented, the video might not load
+        // until a play command is issued.
+        // You can try an immediate play() call, but it might be blocked by browser policies.
+        // player.play().catch(function(error) {
+        //     console.warn('Attempted to play immediately, but caught error (likely autoplay blocked):', error.name);
+        // });
+    });
+</script>
 </body>
 
 </html>
